# signal-temporal-logic

./: .clang-format  .clang-tidy  .cmake-format.py  .cmake-format.yaml  .editorconfig  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeSettings.json  LICENSE  LICENSE-3rdParty  MANIFEST.in  README.md  VERSION  azure-pipelines.yml  build.sh  codecov.yml  conanfile.txt  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  signaltl_version.cmake  tbump.toml
.github/workflows/: compiler-tests.yml  linux.yml  macos.yml  sanitizer.yml  static-analysis.yml  unit-tests.yml  windows.yml
azure-devops/: install-deps.yml  vcpkg-deps.yml
ci/: compiler-tests.yml  macos-win-wheels-job.yml  manylinux-wheels-job.yml  unit-tests.yml
cmake/: Cache.cmake  Codecov.cmake  CompilerWarnings.cmake  Conan.cmake  FindGcov.cmake  FindLcov.cmake  FindSphinx.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  ThirdPartyDeps.cmake  ThirdPartyLibs.cmake  Version.cmake  argusConfig.cmake.in  launch-c.in  llvm-cov-wrapper  signal_tlConfig.cmake.in  signaltlConfig.cmake.in  test_filesystem.cpp.in  test_std_filesystem.cc
core/: CMakeLists.txt  minmax.cc
core/include/signal_tl/: ast.hpp  fmt.hpp  signal_tl.hpp
csrc/: ast.hh  bindings.cc  signal.cc  signal.hh
docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst
docs/cpp_lib/: core.rst  parsing.rst  robustness.rst  signal_tl.rst
examples/: CMakeLists.txt  basic_formulas.cc  basic_parsing.cc  basic_robustness.cc  basic_robustness.py  basic_signal.cc  basic_signal.py  test_timestamp_error.cc
include/argus/: ast.hpp  core.hpp  parser.hpp
include/argus/algos/: monitor_fwd.hpp
include/argus/ast/: ast_fwd.hpp  atoms.hpp  attributes.hpp  expression.hpp  functions.hpp  propositional.hpp  temporal.hpp
include/argus/internal/: filesystem.hpp
include/signal_tl/: ast.hh  ast.hpp  exception.hh  exception.hpp  fmt.hh  fmt.hpp  minmax.hh  minmax.hpp  mono_wedge.h  robustness.hh  robustness.hpp  signal.hh  signal.hpp  signal_tl.hh  signal_tl.hpp  utils.hh  utils.hpp
pyargus/: MANIFEST.in  setup.cfg
pyargus/pyargus/: init.py.in  pyrobustness.cc  pysignal.cc  pysignal_tl.cc
python_bindings/: CMakeLists.txt  init.py.in  pyast.cc  pysignal.cc  pysignal_tl.cc
scripts/: run_coverage.sh
signal_tl/: __init__.py  _version.py  bindings.hh  bindings.hpp  pyast.cc  pyrobustness.cc  pysignal.cc  pysignal_tl.cc
src/: CMakeLists.txt  ast.cc  classic_robustness.cc  efficient_robustness.cc  libargus.cc  minmax.cc  minmax.hh  signal.cc  utils.hh
src/algorithms/robust_semantics/: classic_robustness.cc  minmax.cc
src/ast/: ast.cc  atoms.cc  attributes.cc  expression.cc  functions.cc  make_expr.cc  propositional.cc  temporal.cc
src/core/: ast.cc  classic_robustness.cc  minmax.cc  signal.cc
src/include/signal_tl/: ast.hpp  exception.hpp  fmt.hpp  grammar.hpp  parser.hpp  robustness.hpp
src/include/signal_tl/automaton/: automaton.hpp  constraint.hpp
src/include/signal_tl/internal/: filesystem.hpp  grammar.hpp  minmax.hpp
src/parser/: actions.hpp  error_messages.hpp  grammar.cc  grammar.hpp  parser.cc  parser_errors.hpp
src/robust_semantics/: classic_robustness.cc
src/signals/: signal.cc
src/utils/: lookup_table.hpp  static_analysis_helpers.hpp  visit.hpp
test/: test_robustness.cc  test_signal.cc
tests/: CMakeLists.txt  custom_generators.hpp  signaltl_tests.cc  signaltl_tests.hh  test_append_error.cc  test_main.cc  test_parser.cc  test_signals.cc
tests/ast/: test_structure.cc
tests/formulas/: formula0.stl-spec  formula1.stl-spec  formula2.stl-spec  formula3.stl-spec  formulafail1.stl-spec  formulafail2.stl-spec  formulafail3.stl-spec
tests/parser/: test_grammar.cc
tests/utils/: test_visit.cc
tools/: argus.imp  pegtl.imp  run_coverage.sh  run_static_analysis.sh
