[metadata]
name = signal-temporal-logic
version = 0.1.post1
description = Python library for working with Signal Temporal Logic (STL)
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE, LICENSE-3rdParty

author = Anand Balakrishnan
author_email = anandbala1597@gmail.com
url = https://github.com/anand-bala/signal-temporal-logic

classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: C++
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research

[options]
zip_safe = False
packages = find:
python_requires = >= 3.5, == 3.*

